--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native": "^0.63.2",
     "react-native-animated-wave": "^1.2.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^5.6.0",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.8.0",
