--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "victory-native": "^35.0.1"
   },
